@@ -2115,7 +2115,8 @@ os.exit()
   (if fname (setq fname (ee-shorten-file-name fname)))
   (setq fname (or fname "{fname}"))
   (setq c (or c "{c}"))
-  (let* ((dir (file-name-directory fname)))
+  (let* ((dir (file-name-directory fname))
+	 (fname0 (file-name-nondirectory fname)))
     (apply
      'find-elinks-elisp
      `((find-extra-file-links ,fname ,c ,@pos-spec-list)
@@ -2128,6 +2129,7 @@ os.exit()
 ;;      (find-pdf-like-intro \"9. Generating three pairs\" \"`M-h M-p'\")
 
 ;; Links to this file and directory:
+;; (find-fline {(ee-S dir)} {(ee-S fname0)})
 ;; (find-fline {(ee-S fname)})
 ;; (find-fline {(ee-S dir)})
 \(code-c-d \"{c}\" \"{dir}\")
@@ -2429,6 +2431,27 @@ sudo ./install-tl -select-repository
 (defvar ee-0x0-url nil
   "The last URL generated by a call to `ee-0x0-upload-region'.")
 
+(defun ee-0x0-upload (&rest rest)
+  "This should work like `0x0-upload'. Redefine if needed."
+  (apply '0x0-upload rest))
+
+;; If you are using a version of 0x0 that doesn't have `0x0-upload'
+;; then try using the hack below. See:
+;;   https://gitlab.com/willvaughn/emacs-0x0/-/issues/2
+;;
+;; Based on: (find-efunction '0x0-upload-kill-ring)
+' (defun ee-0x0-upload (b e server-old)
+    "This is a hack. See the source code."
+    (let ((server (0x0--choose-server))
+	  (region-contents (buffer-substring-no-properties b e)))
+      (with-temp-buffer
+	(insert region-contents)
+	(let* ((file-name (or (buffer-file-name) (buffer-name) "kill-ring.txt"))
+               (bounds (0x0--make-bounds))
+               (size (0x0--bounds-size bounds))
+               (resp (0x0--send server file-name bounds)))
+	  (0x0--handle-resp server size resp)))))
+
 (defun ee-0x0-upload-region (b e)
   "Upload the current region to 0x0 and show some elisp hyperlinks.
 I use this mainly on IRC chats, to send elisp snippets to people
@@ -2451,10 +2474,9 @@ runs in Emacs I can send the find-wget-elisp sexp to her and she
 only needs to type `M-e' on it to access the elisp code that I
 sent."
   (interactive "r")
-  (0x0-upload b e '0x0)
+  (ee-0x0-upload b e '0x0)
   (setq ee-0x0-url (ee-last-kill))
   (find-0x0-links))
-
 
 ;; «find-0x0-links»  (to ".find-0x0-links")
 ;; Skel: (find-find-links-links-new "0x0" "url" "")
